cros: Don't show Guest button during sync consent

This change involves exposing another OOBE state to views. For now,
it is piped through login-header-bar like the other states. We can
migrate this to using display_manager.js directly in the future.

Bug: 911038
Change-Id: I30013cf0c27b6a8691b09bdcfa0dae1709c36e2b
Reviewed-on: https://chromium-review.googlesource.com/c/1370911
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616144}
Former-commit-id: ea6644de938ffcd0011cdeb495aa4c45082928b4