chrome/browser/resources/chromeos/login/screen_gaia_signin.js
@@ -638,7 +638,6 @@ login.createScreen('GaiaSigninScreen', 'gaia-signin', function() {
      */
     onBeforeHide: function() {
       chrome.send('loginUIStateChanged', ['gaia-signin', false]);
-      $('login-header-bar').signinUIState = SIGNIN_UI_STATE.HIDDEN;
       $('offline-gaia').switchToEmailCard(false /* animated */);
     },
 
