chrome/browser/resources/chromeos/login/screen_sync_consent.js
@@ -24,6 +24,7 @@ login.createScreen('SyncConsentScreen', 'sync-consent', function() {
      */
     onBeforeShow: function(data) {
       Oobe.getInstance().headerHidden = true;
+      $('login-header-bar').signinUIState = SIGNIN_UI_STATE.SYNC_CONSENT;
     },
 
     /**
@@ -31,6 +32,7 @@ login.createScreen('SyncConsentScreen', 'sync-consent', function() {
      */
     onBeforeHide: function() {
       this.setThrobberVisible(false /*visible*/);
+      $('login-header-bar').signinUIState = SIGNIN_UI_STATE.HIDDEN;
     },
 
     /**
